adjust marker size, clarify nav buttons

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,7 +20,7 @@
     <section class="page-header">
       <div class="cust-project-name">{{ site.title | default: site.github.repository_name }}</div>
       <div class="cust-project-tagline">{{ site.description | default: site.github.project_tagline }}</div>
-      <div class="cust-nav-wrap"><a href="index.html" class="btn">Home</a>
+      <div class="cust-nav-wrap"><a href="index.html" class="btn">About</a>
       <a href="{{ site.covid_explorer_url }}" class="btn">"Real-Time" County R<sub>t</sub> Explorer</a>
       <a href="{{ site.choropleth_covid_explorer_url }}" class="btn">R<sub>t</sub> Choropleth Explorer</a>
       {% if site.show_downloads %}
