added note regarding daily update time

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -332,3 +332,9 @@ img#national_img {
     position: relative;
     top: -30px;
 }
+
+.note {
+    font-style: italic;
+    font-size: 0.9rem;
+    color:  #003566;
+}
