test jekyll theme bug fix

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,7 +1,8 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+//@import "{{ site.theme }}"; hardcode test below
+@import "jekyll-theme-cayman";
 .dashboard_graphs {
 	width: 90%;
 	height: 90%;
